--- a/_posts/2025-05-11-blog-post-2.md
+++ b/_posts/2025-05-11-blog-post-2.md
@@ -8,12 +8,14 @@ tags:
   - category2
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+Introduction to my channel crossing microplastic investigation.
 
-Headings are cool
+Setting sail for science: a micro mission!
 ======
 
-You can have many headings
+Channelling my inner scientist as I cross the English Channel
 ======
 
-Aren't headings cool?
+This summer, I’m not just chasing the tide — I’m tracking the tiny. From the shores of Jersey to the far side of the English Channel, I’m sailing straight into the swirling story of microplastics. Armed with a net, some labware, and a possibly overconfident sense of direction, I’m diving into a plastic problem that's as invisible as it is impactful.
+
+When I said I wanted a summer project, I didn’t mean just sunbathing. Instead, I’ll be setting sail from Jersey to explore the not-so-visible invaders in our seas: microplastics. Armed with curiosity and a sieve, I’m turning my boat into a floating lab.
