--- a/_posts/2025-05-11-blog-post-2.md
+++ b/_posts/2025-05-11-blog-post-2.md
@@ -1,5 +1,5 @@
 ---
-title: 'Blog Post number 2'
+title: 'English Channel Microplastics Investigation Summer Project'
 date: 2025-05-18
 permalink: /posts/2025/05/blog-post-2/
 tags:
@@ -8,14 +8,28 @@ tags:
   - category2
 ---
 
-Introduction to my channel crossing microplastic investigation.
+Here goes, hot girl summer plans!
 
-Setting sail for science: a micro mission!
+English Channel Microplastics Investigation
 ======
 
-Channelling my inner scientist as I cross the English Channel
+Tracing microplastics as I sail from Jersey to Southhampton this summer:))
 ======
 
-This summer, I’m not just chasing the tide — I’m tracking the tiny. From the shores of Jersey to the far side of the English Channel, I’m sailing straight into the swirling story of microplastics. Armed with a net, some labware, and a possibly overconfident sense of direction, I’m diving into a plastic problem that's as invisible as it is impactful.
+This summer, I was presented with the opportunity to sail across the English Channel from Jersey to Southampton on my friend's boat. Initially I was thinking "wow that would be fantastic!" Which quickly morphed in to thoughts of "I might get very sea sick and I've commited to a very long trip..." but ultimately, I didn't let fear of unknowns get the better of me and agreed to join in for the trip.
 
-When I said I wanted a summer project, I didn’t mean just sunbathing. Instead, I’ll be setting sail from Jersey to explore the not-so-visible invaders in our seas: microplastics. Armed with curiosity and a sieve, I’m turning my boat into a floating lab.
+Growing up in Cornwall, I have spent my fair amount of time by the sea. I was even fortunate enough to grow up with a Dad who is in to sailing, we co own a small yacht with our friend Tony and many summer evenings were spent sailing down the estuary to a pontoon to go for a swim. I have not however, ever been on a sail boat and not been able to see land. This trip will entail potentially a whole day of this. I am looking forward to how this experience will make me feel, only being abke to see the sea and the sky.
+
+To pass the time on the trip, I wanted to gve myself a challenge. Time to introduce Emily Penn, an ocean activist I have been inspired by and through her work was encouraged to study Materials Science at university to better understand plastics and they affect our environment. Emily has led an all female crew around the globe, collecting and observing microplastics from their floating laboratory. Basically I want to completely steal this idea and carry out some citizen science of my own.
+
+My plan is to run a Manta Trawler off the back of the boat to collect surface level microplastics. I will observe the microplastics on deck my sifting through them through different coarseness of seive and view them under a microscope. Once I have derived synthetic matter from organic, I will log my findings on the debris tracker app. This whole process won't be anything crazy, I am just very interested to see for myself the amount of microplastic we will collect during our crossing.
+
+My plan of action is as follows:
+1 . Source a manta trawler, portable microscope, and seive set
+2 . Ask Emily for advice regarding my project at a film premiere of her trip microplastics circumnavigation with her all female crew (this is happening next Thursday and I am so excited!)
+3 . Test a prototype of the experiment set up on a sailing trip at home in Cornwall pre big adventure
+4 . Send experiment to boat so I don't have to take it on board my Easy Jet flight to Jersey lol (I only have hand luggage allowance).
+
+So please follow along as I try to execute this fun project! I'll be tracking my progress by dedicating the next few blogs posts around this topic. 
+
+Hope your week is plain sailing!:))
